# robot-voice-ai

./: .gitignore  README.md  architecture.md  pixi.toml
content/: linkedin-post-01.md
imports/: chatgpt-share-69dd8e49.md
mentorpi_ws/: README.md  pixi.toml
mentorpi_ws/scripts/: exploration_smoke_test.py
mentorpi_ws/src/exploration_pkg/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/exploration_pkg/exploration_pkg/: exploration_manager_node.py  polygon_builder.py  voice_tag_handler.py
mentorpi_ws/src/exploration_pkg/resource/: exploration_pkg
mentorpi_ws/src/navigation_executor_pkg/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/navigation_executor_pkg/navigation_executor_pkg/: navigation_executor_node.py
mentorpi_ws/src/navigation_executor_pkg/resource/: navigation_executor_pkg
mentorpi_ws/src/navigation_stack/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/navigation_stack/config/: nav2_params.yaml
mentorpi_ws/src/navigation_stack/resource/: navigation_stack
mentorpi_ws/src/perception_pkg/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/perception_pkg/perception_pkg/: object_detection_node.py  object_search_node.py
mentorpi_ws/src/robot_bringup/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/robot_bringup/launch/: robot_system.launch.py  smoke_test.launch.py
mentorpi_ws/src/robot_voice_ai_interfaces/: CMakeLists.txt  package.xml
mentorpi_ws/src/robot_voice_ai_interfaces/msg/: IntentCommand.msg  ObjectSighting.msg  Room.msg  TaskPlan.msg
mentorpi_ws/src/robot_voice_ai_interfaces/srv/: GetRoom.srv  QueryObject.srv
mentorpi_ws/src/semantic_map_pkg/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/semantic_map_pkg/resource/: semantic_map_pkg
mentorpi_ws/src/semantic_map_pkg/semantic_map_pkg/: polygon_utils.py  semantic_map_node.py
mentorpi_ws/src/semantic_map_pkg/storage/: map_db.json
mentorpi_ws/src/slam_mapping/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/slam_mapping/config/: slam_toolbox.yaml
mentorpi_ws/src/slam_mapping/resource/: slam_mapping
mentorpi_ws/src/task_planning_pkg/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/task_planning_pkg/resource/: task_planning_pkg
mentorpi_ws/src/task_planning_pkg/task_planning_pkg/: llm_interface.py  task_planner_node.py
mentorpi_ws/src/voice_interface_pkg/: package.xml  setup.cfg  setup.py
mentorpi_ws/src/voice_interface_pkg/resource/: voice_interface_pkg
mentorpi_ws/src/voice_interface_pkg/voice_interface_pkg/: intent_parser.py  speech_to_text_node.py  text_to_speech_node.py  voice_command_router_node.py
