<?xml version="1.0"?>
<package format="3">
  <name>navigation_executor_pkg</name>
  <version>0.0.1</version>
  <description>Semantic goal execution and future Nav2 action integration.</description>
  <maintainer email="user@example.com">Robot Voice AI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
