<?xml version="1.0"?>
<package format="3">
  <name>perception_pkg</name>
  <version>0.0.1</version>
  <description>Object detection and search coordination scaffolding.</description>
  <maintainer email="user@example.com">Robot Voice AI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_voice_ai_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
