<?xml version="1.0"?>
<package format="3">
  <name>slam_mapping</name>
  <version>0.0.1</version>
  <description>SLAM configuration placeholders for the MentorPi mapping stack.</description>
  <maintainer email="user@example.com">Robot Voice AI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
